--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "util"
+    "url": "https://github.com/roteKlaue/SussyUtilMadeByMe"
   },
   "keywords": [
     "js",
