First Code Commit

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "sussyutilbyraphaelbader",
   "version": "1.0.0",
   "description": "util made by me",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
