--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "util made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
