--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "util made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/roteKlaue/SussyUtilMadeByMe"
+    "url": "https://github.com/roteKlaue/SussyUtilMadeByMe.git"
   },
   "keywords": [
     "js",
