--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.3.1",
+  "version": "1.3.2 prerelease",
   "description": "util made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
