--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.3.2",
-  "description": "util made by me",
+  "version": "1.4.0 prerelease 1",
+  "description": "Util package made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "scripts": {
@@ -24,7 +24,10 @@
     "Raphael",
     "Bader",
     "Jonas",
-    "Koch"
+    "Koch",
+    "Felix",
+    "Aron",
+    "Heger"
   ],
   "author": "roteKlaue",
   "license": "MIT"
