--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "Heger"
   ],
   "author": "roteKlaue",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^18.11.5"
+  }
 }
