--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sussyutilbyraphaelbader",
+  "name": "util.by.bader",
   "version": "1.5.0",
   "description": "Util package made by me",
   "main": "./build/index.js",
