--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.6.0",
+  "version": "1.7.0-alpha.1",
   "description": "Util package made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -27,7 +27,10 @@
     "Koch",
     "Felix",
     "Aron",
-    "Heger"
+    "Heger",
+    "Jan",
+    "Gregor",
+    "Köck"
   ],
   "author": "roteKlaue",
   "license": "MIT",
