--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.7.0-beta.2",
+  "version": "1.7.0",
   "description": "Util package made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -38,5 +38,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.5"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
