--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "Heger",
     "Jan",
     "Gregor",
-    "Köck"
+    "Köck",
+    "backend"
   ],
   "author": "roteKlaue",
   "license": "MIT",
