--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sussyutilbyraphaelbader",
-  "version": "1.8.0-alpha.1",
+  "version": "1.8.0-beta.1",
   "description": "Util package made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -24,7 +24,7 @@
     "backend"
   ],
   "author": "roteKlaue",
-  "license": "MIT",
+  "license": "GNU-3.0",
   "devDependencies": {
     "@types/node": "^18.11.5"
   },
