--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/roteKlaue/sussy-util.git"
+    "url": "https://github.com/roteKlaue/sussy-util/tree/Version-12"
   },
   "keywords": [
     "js",
