--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,6 @@
 /src
 .gitignore
-/node_modules
+**/node_modules
 .gitattributes
 tsconfig.json
 /.vscode
@@ -19,3 +19,4 @@ mint.json
 .dccache
 snyk.exe
 /.idea
+/examples
