--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "sussy-util",
-  "version": "13.0.0-dev",
-  "description": "Util package made by me",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
-  "scripts": {
-    "compile": "tsc",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/roteKlaue/sussy-util/tree/Version-12"
-  },
-  "keywords": [
-    "js",
-    "ts",
-    "TypeScript",
-    "JavaScript",
-    "EcmaScript",
-    "util",
-    "backend"
-  ],
-  "author": "roteKlaue",
-  "license": "GPL-3.0",
-  "devDependencies": {
-    "@types/node": "^20.4.2"
-  }
+    "name": "sussy-util",
+    "version": "13.0.0-dev",
+    "description": "Util package made by me",
+    "main": "./build/index.js",
+    "types": "./build/index.d.ts",
+    "scripts": {
+        "compile": "npx tsc",
+        "lint": "npx eslint .",
+        "lint:fix": "npx eslint . --fix"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/roteKlaue/sussy-util/tree/Version-12"
+    },
+    "keywords": [
+        "js",
+        "ts",
+        "TypeScript",
+        "JavaScript",
+        "EcmaScript",
+        "util",
+        "backend"
+    ],
+    "author": "roteKlaue",
+    "license": "GPL-3.0",
+    "devDependencies": {
+        "@types/node": "^20.4.2",
+        "@typescript-eslint/eslint-plugin": "^6.16.0",
+        "@typescript-eslint/parser": "^6.16.0",
+        "eslint": "^8.56.0",
+        "typescript": "^5.3.3"
+    }
 }
