--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "compile": "npx tsc",
         "lint": "npx eslint .",
-        "lint:fix": "npx eslint . --fix"
+        "lint:fix": "npx eslint . --fix",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -25,10 +26,16 @@
     "author": "roteKlaue",
     "license": "GPL-3.0",
     "devDependencies": {
+        "@types/jest": "^29.5.12",
         "@types/node": "^20.4.2",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
         "eslint": "^8.56.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.5",
         "typescript": "^5.3.3"
+    },
+    "jest": {
+        "preset": "ts-jest"
     }
 }
