--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "license": "GPL-3.0",
     "devDependencies": {
         "@types/jest": "^29.5.12",
-        "@types/node": "^22.5.2"
-        "@typescript-eslint/eslint-plugin": "^6.16.0",
-        "@typescript-eslint/parser": "^6.16.0",
-        "eslint": "^8.56.0",
+        "@types/node": "^22.5.2",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "eslint": "^8.57.1",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.5",
         "typescript": "^5.3.3"
