refactor: improve utility classes, add tests
- Updated `quickSelect` in `ArrayUtil.ts` to enhance readability and ensure robust guard clauses.
- Refined `BetterMath.ts` methods for correctness and clarity:
  - Improved parameter validation in `round` and `countDecimalDigits`.
  - Simplified logic in `median` and enhanced return consistency.
- Adjusted `Queue.ts` to use `Optional.ofNullable` for better null safety.
- Fixed test assertions in `AbstractClass.test.ts` to match expected behavior.
- Expanded `BetterMath.test.ts` to cover additional functionality, including:
  - `distance`, `gcd`, `lcd`, `factorialWithMemoization`, and more.
- Updated `package.json` to use `npx jest` for running tests.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "compile": "npx tsc",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix",
-        "test": "jest"
+        "test": "npx jest"
     },
     "repository": {
         "type": "git",
