--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "compile": "npx tsc",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix",
-        "test": "npx jest"
+        "test": "npx jest",
+        "test:ci": "npm ci && npm run compile && npm run lint && npm test"
     },
     "repository": {
         "type": "git",
@@ -28,12 +29,15 @@
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "@types/node": "^22.5.2",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "eslint": "^8.57.1",
+        "@typescript-eslint/eslint-plugin": "^8.38.0",
+        "@typescript-eslint/parser": "^8.38.0",
+        "eslint": "^9.31.0",
+        "eslint-plugin-prettier": "^5.5.3",
         "jest": "^29.7.0",
+        "prettier": "^3.6.2",
         "ts-jest": "^29.1.5",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^8.38.0"
     },
     "jest": {
         "preset": "ts-jest"
