--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sussy-util",
-    "version": "13.0.0-dev",
+    "version": "13.0.0",
     "description": "Util package made by me",
     "main": "./build/index.js",
     "types": "./build/index.d.ts",
@@ -36,7 +36,7 @@
         "jest": "^29.7.0",
         "prettier": "^3.6.2",
         "ts-jest": "^29.1.5",
-        "typescript": "^5.3.3",
+        "typescript": "^5.9.3",
         "typescript-eslint": "^8.38.0"
     },
     "jest": {
