--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "sussy-util",
-  "version": "12.0.0",
+  "version": "12.0.1",
   "description": "Util package made by me",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "scripts": {
     "compile": "tsc",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -25,6 +24,19 @@
   "author": "roteKlaue",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/node": "^20.4.2"
+    "@types/node": "^20.4.2",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.38.0"
+  },
+  "jest": {
+    "preset": "ts-jest"
   }
 }
